assignment_3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONST
    RUNE
    CHAN
    COND
    COM
    SELECT
    DEFER
    RANGE
    ELLIPSIS
    GO
    MAP
    INTERFACE

Grammar

Rule 0     S' -> SourceFile
Rule 1     SourceFile -> PackageClause ImportDeclList TopLevelDeclList
Rule 2     SourceFile -> PackageClause ImportDeclList
Rule 3     SourceFile -> PackageClause TopLevelDeclList
Rule 4     SourceFile -> PackageClause
Rule 5     PackageClause -> PACKAGE ID SEMICOLON
Rule 6     ImportDeclList -> ImportDecl SEMICOLON
Rule 7     ImportDeclList -> ImportDeclList ImportDecl SEMICOLON
Rule 8     ImportDecl -> IMPORT LPAREN ImportSpecList RPAREN
Rule 9     ImportDecl -> IMPORT LPAREN RPAREN
Rule 10    ImportDecl -> IMPORT ImportSpec
Rule 11    ImportSpecList -> ImportSpec SEMICOLON
Rule 12    ImportSpecList -> ImportSpecList ImportSpec SEMICOLON
Rule 13    ImportSpec -> ID ImportPath
Rule 14    ImportSpec -> PERIOD ImportPath
Rule 15    ImportSpec -> ImportPath
Rule 16    ImportPath -> STRING
Rule 17    TopLevelDeclList -> TopLevelDecl SEMICOLON
Rule 18    TopLevelDeclList -> TopLevelDeclList TopLevelDecl SEMICOLON
Rule 19    TopLevelDecl -> Declaration
Rule 20    TopLevelDecl -> FunctionDecl
Rule 21    OPENB -> <empty>
Rule 22    CLOSEB -> <empty>
Rule 23    StartScope -> <empty>
Rule 24    EndScope -> <empty>
Rule 25    StructScope -> <empty>
Rule 26    FunctionDecl -> FUNC ID StartScope Signature EndScope
Rule 27    FunctionDecl -> FUNC ID StartScope Signature Block EndScope
Rule 28    Declaration -> ConstDecl
Rule 29    Declaration -> TypeDecl
Rule 30    Declaration -> VarDecl
Rule 31    ConstDecl -> <empty>
Rule 32    TypeDecl -> TYPE TypeSpec
Rule 33    TypeDecl -> TYPE LPAREN TypeSpecList RPAREN
Rule 34    TypeDecl -> TYPE LPAREN RPAREN
Rule 35    TypeSpecList -> TypeSpec SEMICOLON
Rule 36    TypeSpecList -> TypeSpecList TypeSpec SEMICOLON
Rule 37    TypeSpec -> ID ASSIGN Type
Rule 38    TypeSpec -> ID Type
Rule 39    Type -> VARTYPE
Rule 40    Type -> LiteralType
Rule 41    Type -> ID
Rule 42    LiteralType -> ArrayType
Rule 43    LiteralType -> StructType
Rule 44    LiteralType -> PointerType
Rule 45    ArrayType -> LBRACK Expression RBRACK Type
Rule 46    StructType -> STRUCT StructScope LBRACE FieldDeclList RBRACE EndScope
Rule 47    StructType -> STRUCT StructScope LBRACE RBRACE EndScope
Rule 48    FieldDeclList -> FieldDecl SEMICOLON
Rule 49    FieldDeclList -> FieldDeclList FieldDecl SEMICOLON
Rule 50    FieldDecl -> IdentifierList Type STRING
Rule 51    FieldDecl -> IdentifierList Type
Rule 52    PointerType -> MUL Type
Rule 53    Signature -> Parameters
Rule 54    Signature -> Parameters Type
Rule 55    Signature -> Parameters Parameters
Rule 56    Parameters -> LPAREN RPAREN
Rule 57    Parameters -> LPAREN ParameterList RPAREN
Rule 58    Parameters -> LPAREN ParameterList COMMA RPAREN
Rule 59    ParameterList -> ParameterDecl
Rule 60    ParameterList -> ParameterList COMMA ParameterDecl
Rule 61    ParameterDecl -> Type
Rule 62    ParameterDecl -> IdentifierList Type
Rule 63    VarDecl -> VAR VarSpec
Rule 64    VarDecl -> VAR LPAREN VarSpecList RPAREN
Rule 65    VarDecl -> VAR LPAREN RPAREN
Rule 66    VarSpecList -> VarSpec SEMICOLON
Rule 67    VarSpecList -> VarSpecList VarSpec SEMICOLON
Rule 68    VarSpec -> IdentifierList Type
Rule 69    VarSpec -> IdentifierList Type ASSIGN ExpressionList
Rule 70    VarSpec -> IdentifierList Type ASSIGN LBRACE ExpressionList RBRACE
Rule 71    IdentifierList -> ID
Rule 72    IdentifierList -> IdentifierList COMMA ID
Rule 73    ShortVarDecl -> IdentifierList DEFINE ExpressionList
Rule 74    Block -> LBRACE StatementList RBRACE
Rule 75    StatementList -> StatementList Statement SEMICOLON
Rule 76    StatementList -> Statement SEMICOLON
Rule 77    Statement -> Declaration
Rule 78    Statement -> SimpleStmt
Rule 79    Statement -> ReturnStmt
Rule 80    Statement -> BreakStmt
Rule 81    Statement -> ContinueStmt
Rule 82    Statement -> LabeledStmt
Rule 83    Statement -> GotoStmt
Rule 84    Statement -> StartScope Block EndScope
Rule 85    Statement -> IfStmt
Rule 86    Statement -> ForStmt
Rule 87    Statement -> SwitchStmt
Rule 88    Statement -> FallthroughStmt
Rule 89    SimpleStmt -> ShortVarDecl
Rule 90    SimpleStmt -> EmptyStmt
Rule 91    SimpleStmt -> ExpressionStmt
Rule 92    SimpleStmt -> IncDecStmt
Rule 93    SimpleStmt -> Assignment
Rule 94    EmptyStmt -> <empty>
Rule 95    ExpressionStmt -> Expression
Rule 96    IncDecStmt -> Expression INC
Rule 97    IncDecStmt -> Expression DEC
Rule 98    Assignment -> ExpressionList assign_op ExpressionList
Rule 99    ReturnStmt -> RETURN
Rule 100   ReturnStmt -> RETURN ExpressionList
Rule 101   BreakStmt -> BREAK
Rule 102   BreakStmt -> BREAK ID
Rule 103   ContinueStmt -> CONTINUE
Rule 104   ContinueStmt -> CONTINUE ID
Rule 105   LabeledStmt -> ID COLON Statement
Rule 106   GotoStmt -> GOTO ID
Rule 107   IfStmt -> IF Expression StartScope Block EndScope
Rule 108   IfStmt -> IF Expression StartScope Block EndScope ELSE StartScope Block EndScope
Rule 109   IfStmt -> IF Expression StartScope Block EndScope ELSE StartScope IfStmt EndScope
Rule 110   ForStmt -> FOR ForStmt1 Block
Rule 111   ForStmt1 -> ForClause
Rule 112   Condition -> Expression
Rule 113   ForClause -> SimpleStmt SEMICOLON Condition SEMICOLON SimpleStmt
Rule 114   SwitchStmt -> ExprSwitchStmt
Rule 115   ExprSwitchStmt -> SWITCH SimpleStmt SEMICOLON Expression LBRACE ExprCaseClauseList RBRACE
Rule 116   ExprSwitchStmt -> SWITCH SimpleStmt SEMICOLON Expression LBRACE RBRACE
Rule 117   ExprSwitchStmt -> SWITCH Expression LBRACE ExprCaseClauseList RBRACE
Rule 118   ExprSwitchStmt -> SWITCH Expression LBRACE RBRACE
Rule 119   ExprSwitchStmt -> SWITCH LBRACE ExprCaseClauseList RBRACE
Rule 120   ExprSwitchStmt -> SWITCH LBRACE RBRACE
Rule 121   ExprCaseClauseList -> ExprCaseClause
Rule 122   ExprCaseClauseList -> ExprCaseClauseList ExprCaseClause
Rule 123   ExprCaseClause -> ExprSwitchCase COLON StatementList
Rule 124   ExprSwitchCase -> CASE ExpressionList
Rule 125   ExprSwitchCase -> DEFAULT
Rule 126   ExprSwitchCase -> CASE Expression
Rule 127   FallthroughStmt -> FALLTHROUGH
Rule 128   ExpressionList -> Expression
Rule 129   ExpressionList -> ExpressionList COMMA Expression
Rule 130   Expression -> Expression1
Rule 131   Expression1 -> Expression2
Rule 132   Expression1 -> Expression1 LOR Expression2
Rule 133   Expression2 -> Expression3
Rule 134   Expression2 -> Expression2 LAND Expression3
Rule 135   Expression3 -> Expression4
Rule 136   Expression3 -> Expression3 rel_op Expression4
Rule 137   Expression4 -> Expression5
Rule 138   Expression4 -> Expression4 add_op Expression5
Rule 139   Expression5 -> UnaryExpr
Rule 140   Expression5 -> Expression5 mul_op UnaryExpr
Rule 141   UnaryExpr -> PrimaryExpr
Rule 142   UnaryExpr -> unary_op UnaryExpr
Rule 143   PrimaryExpr -> Operand
Rule 144   PrimaryExpr -> PrimaryExpr Selector
Rule 145   Selector -> PERIOD ID
Rule 146   PrimaryExpr -> PrimaryExpr Index
Rule 147   Index -> LBRACK Expression RBRACK
Rule 148   PrimaryExpr -> PrimaryExpr Arguments
Rule 149   Arguments -> LPAREN RPAREN
Rule 150   Arguments -> LPAREN ExpressionList COMMA RPAREN
Rule 151   Arguments -> LPAREN ExpressionList RPAREN
Rule 152   Operand -> Literal
Rule 153   Operand -> ID
Rule 154   Operand -> LPAREN Expression RPAREN
Rule 155   Literal -> BasicLit
Rule 156   BasicLit -> INT
Rule 157   BasicLit -> FLOAT
Rule 158   BasicLit -> STRING
Rule 159   BasicLit -> IMAG
Rule 160   assign_op -> ASSIGN
Rule 161   assign_op -> ADD_ASSIGN
Rule 162   assign_op -> SUB_ASSIGN
Rule 163   assign_op -> MUL_ASSIGN
Rule 164   assign_op -> QUO_ASSIGN
Rule 165   assign_op -> REM_ASSIGN
Rule 166   assign_op -> AND_ASSIGN
Rule 167   assign_op -> OR_ASSIGN
Rule 168   assign_op -> XOR_ASSIGN
Rule 169   assign_op -> SHL_ASSIGN
Rule 170   assign_op -> SHR_ASSIGN
Rule 171   assign_op -> AND_NOT_ASSIGN
Rule 172   rel_op -> EQL
Rule 173   rel_op -> NEQ
Rule 174   rel_op -> LSS
Rule 175   rel_op -> LEQ
Rule 176   rel_op -> GTR
Rule 177   rel_op -> GEQ
Rule 178   add_op -> ADD
Rule 179   add_op -> SUB
Rule 180   add_op -> OR
Rule 181   add_op -> XOR
Rule 182   mul_op -> MUL
Rule 183   mul_op -> QUO
Rule 184   mul_op -> REM
Rule 185   mul_op -> SHL
Rule 186   mul_op -> SHR
Rule 187   mul_op -> AND
Rule 188   mul_op -> AND_NOT
Rule 189   unary_op -> ADD
Rule 190   unary_op -> SUB
Rule 191   unary_op -> NOT
Rule 192   unary_op -> XOR
Rule 193   unary_op -> MUL
Rule 194   unary_op -> AND
Rule 195   unary_op -> ARROW

Terminals, with rules where they appear

ADD                  : 178 189
ADD_ASSIGN           : 161
AND                  : 187 194
AND_ASSIGN           : 166
AND_NOT              : 188
AND_NOT_ASSIGN       : 171
ARROW                : 195
ASSIGN               : 37 69 70 160
BREAK                : 101 102
CASE                 : 124 126
CHAN                 : 
COLON                : 105 123
COM                  : 
COMMA                : 58 60 72 129 150
COND                 : 
CONST                : 
CONTINUE             : 103 104
DEC                  : 97
DEFAULT              : 125
DEFER                : 
DEFINE               : 73
ELLIPSIS             : 
ELSE                 : 108 109
EQL                  : 172
FALLTHROUGH          : 127
FLOAT                : 157
FOR                  : 110
FUNC                 : 26 27
GEQ                  : 177
GO                   : 
GOTO                 : 106
GTR                  : 176
ID                   : 5 13 26 27 37 38 41 71 72 102 104 105 106 145 153
IF                   : 107 108 109
IMAG                 : 159
IMPORT               : 8 9 10
INC                  : 96
INT                  : 156
INTERFACE            : 
LAND                 : 134
LBRACE               : 46 47 70 74 115 116 117 118 119 120
LBRACK               : 45 147
LEQ                  : 175
LOR                  : 132
LPAREN               : 8 9 33 34 56 57 58 64 65 149 150 151 154
LSS                  : 174
MAP                  : 
MUL                  : 52 182 193
MUL_ASSIGN           : 163
NEQ                  : 173
NOT                  : 191
OR                   : 180
OR_ASSIGN            : 167
PACKAGE              : 5
PERIOD               : 14 145
QUO                  : 183
QUO_ASSIGN           : 164
RANGE                : 
RBRACE               : 46 47 70 74 115 116 117 118 119 120
RBRACK               : 45 147
REM                  : 184
REM_ASSIGN           : 165
RETURN               : 99 100
RPAREN               : 8 9 33 34 56 57 58 64 65 149 150 151 154
RUNE                 : 
SELECT               : 
SEMICOLON            : 5 6 7 11 12 17 18 35 36 48 49 66 67 75 76 113 113 115 116
SHL                  : 185
SHL_ASSIGN           : 169
SHR                  : 186
SHR_ASSIGN           : 170
STRING               : 16 50 158
STRUCT               : 46 47
SUB                  : 179 190
SUB_ASSIGN           : 162
SWITCH               : 115 116 117 118 119 120
TYPE                 : 32 33 34
VAR                  : 63 64 65
VARTYPE              : 39
XOR                  : 181 192
XOR_ASSIGN           : 168
error                : 

Nonterminals, with rules where they appear

Arguments            : 148
ArrayType            : 42
Assignment           : 93
BasicLit             : 155
Block                : 27 84 107 108 108 109 110
BreakStmt            : 80
CLOSEB               : 
Condition            : 113
ConstDecl            : 28
ContinueStmt         : 81
Declaration          : 19 77
EmptyStmt            : 90
EndScope             : 26 27 46 47 84 107 108 108 109 109
ExprCaseClause       : 121 122
ExprCaseClauseList   : 115 117 119 122
ExprSwitchCase       : 123
ExprSwitchStmt       : 114
Expression           : 45 95 96 97 107 108 109 112 115 116 117 118 126 128 129 147 154
Expression1          : 130 132
Expression2          : 131 132 134
Expression3          : 133 134 136
Expression4          : 135 136 138
Expression5          : 137 138 140
ExpressionList       : 69 70 73 98 98 100 124 129 150 151
ExpressionStmt       : 91
FallthroughStmt      : 88
FieldDecl            : 48 49
FieldDeclList        : 46 49
ForClause            : 111
ForStmt              : 86
ForStmt1             : 110
FunctionDecl         : 20
GotoStmt             : 83
IdentifierList       : 50 51 62 68 69 70 72 73
IfStmt               : 85 109
ImportDecl           : 6 7
ImportDeclList       : 1 2 7
ImportPath           : 13 14 15
ImportSpec           : 10 11 12
ImportSpecList       : 8 12
IncDecStmt           : 92
Index                : 146
LabeledStmt          : 82
Literal              : 152
LiteralType          : 40
OPENB                : 
Operand              : 143
PackageClause        : 1 2 3 4
ParameterDecl        : 59 60
ParameterList        : 57 58 60
Parameters           : 53 54 55 55
PointerType          : 44
PrimaryExpr          : 141 144 146 148
ReturnStmt           : 79
Selector             : 144
ShortVarDecl         : 89
Signature            : 26 27
SimpleStmt           : 78 113 113 115 116
SourceFile           : 0
StartScope           : 26 27 84 107 108 108 109 109
Statement            : 75 76 105
StatementList        : 74 75 123
StructScope          : 46 47
StructType           : 43
SwitchStmt           : 87
TopLevelDecl         : 17 18
TopLevelDeclList     : 1 3 18
Type                 : 37 38 45 50 51 52 54 61 62 68 69 70
TypeDecl             : 29
TypeSpec             : 32 35 36
TypeSpecList         : 33 36
UnaryExpr            : 139 140 142
VarDecl              : 30
VarSpec              : 63 66 67
VarSpecList          : 64 67
add_op               : 138
assign_op            : 98
mul_op               : 140
rel_op               : 136
unary_op             : 142

Parsing method: LALR

state 0

    (0) S' -> . SourceFile
    (1) SourceFile -> . PackageClause ImportDeclList TopLevelDeclList
    (2) SourceFile -> . PackageClause ImportDeclList
    (3) SourceFile -> . PackageClause TopLevelDeclList
    (4) SourceFile -> . PackageClause
    (5) PackageClause -> . PACKAGE ID SEMICOLON

    PACKAGE         shift and go to state 2

    PackageClause                  shift and go to state 1
    SourceFile                     shift and go to state 3

state 1

    (1) SourceFile -> PackageClause . ImportDeclList TopLevelDeclList
    (2) SourceFile -> PackageClause . ImportDeclList
    (3) SourceFile -> PackageClause . TopLevelDeclList
    (4) SourceFile -> PackageClause .
    (6) ImportDeclList -> . ImportDecl SEMICOLON
    (7) ImportDeclList -> . ImportDeclList ImportDecl SEMICOLON
    (17) TopLevelDeclList -> . TopLevelDecl SEMICOLON
    (18) TopLevelDeclList -> . TopLevelDeclList TopLevelDecl SEMICOLON
    (8) ImportDecl -> . IMPORT LPAREN ImportSpecList RPAREN
    (9) ImportDecl -> . IMPORT LPAREN RPAREN
    (10) ImportDecl -> . IMPORT ImportSpec
    (19) TopLevelDecl -> . Declaration
    (20) TopLevelDecl -> . FunctionDecl
    (28) Declaration -> . ConstDecl
    (29) Declaration -> . TypeDecl
    (30) Declaration -> . VarDecl
    (26) FunctionDecl -> . FUNC ID StartScope Signature EndScope
    (27) FunctionDecl -> . FUNC ID StartScope Signature Block EndScope
    (31) ConstDecl -> .
    (32) TypeDecl -> . TYPE TypeSpec
    (33) TypeDecl -> . TYPE LPAREN TypeSpecList RPAREN
    (34) TypeDecl -> . TYPE LPAREN RPAREN
    (63) VarDecl -> . VAR VarSpec
    (64) VarDecl -> . VAR LPAREN VarSpecList RPAREN
    (65) VarDecl -> . VAR LPAREN RPAREN

    $end            reduce using rule 4 (SourceFile -> PackageClause .)
    IMPORT          shift and go to state 9
    FUNC            shift and go to state 12
    SEMICOLON       reduce using rule 31 (ConstDecl -> .)
    TYPE            shift and go to state 14
    VAR             shift and go to state 13

    TypeDecl                       shift and go to state 10
    VarDecl                        shift and go to state 15
    FunctionDecl                   shift and go to state 4
    TopLevelDecl                   shift and go to state 5
    ImportDeclList                 shift and go to state 11
    Declaration                    shift and go to state 8
    ConstDecl                      shift and go to state 16
    ImportDecl                     shift and go to state 6
    TopLevelDeclList               shift and go to state 7

state 2

    (5) PackageClause -> PACKAGE . ID SEMICOLON

    ID              shift and go to state 17


state 3

    (0) S' -> SourceFile .



state 4

    (20) TopLevelDecl -> FunctionDecl .

    SEMICOLON       reduce using rule 20 (TopLevelDecl -> FunctionDecl .)


state 5

    (17) TopLevelDeclList -> TopLevelDecl . SEMICOLON

    SEMICOLON       shift and go to state 18


state 6

    (6) ImportDeclList -> ImportDecl . SEMICOLON

    SEMICOLON       shift and go to state 19


state 7

    (3) SourceFile -> PackageClause TopLevelDeclList .
    (18) TopLevelDeclList -> TopLevelDeclList . TopLevelDecl SEMICOLON
    (19) TopLevelDecl -> . Declaration
    (20) TopLevelDecl -> . FunctionDecl
    (28) Declaration -> . ConstDecl
    (29) Declaration -> . TypeDecl
    (30) Declaration -> . VarDecl
    (26) FunctionDecl -> . FUNC ID StartScope Signature EndScope
    (27) FunctionDecl -> . FUNC ID StartScope Signature Block EndScope
    (31) ConstDecl -> .
    (32) TypeDecl -> . TYPE TypeSpec
    (33) TypeDecl -> . TYPE LPAREN TypeSpecList RPAREN
    (34) TypeDecl -> . TYPE LPAREN RPAREN
    (63) VarDecl -> . VAR VarSpec
    (64) VarDecl -> . VAR LPAREN VarSpecList RPAREN
    (65) VarDecl -> . VAR LPAREN RPAREN

    $end            reduce using rule 3 (SourceFile -> PackageClause TopLevelDeclList .)
    FUNC            shift and go to state 12
    SEMICOLON       reduce using rule 31 (ConstDecl -> .)
    TYPE            shift and go to state 14
    VAR             shift and go to state 13

    TypeDecl                       shift and go to state 10
    VarDecl                        shift and go to state 15
    FunctionDecl                   shift and go to state 4
    TopLevelDecl                   shift and go to state 20
    Declaration                    shift and go to state 8
    ConstDecl                      shift and go to state 16

state 8

    (19) TopLevelDecl -> Declaration .

    SEMICOLON       reduce using rule 19 (TopLevelDecl -> Declaration .)


state 9

    (8) ImportDecl -> IMPORT . LPAREN ImportSpecList RPAREN
    (9) ImportDecl -> IMPORT . LPAREN RPAREN
    (10) ImportDecl -> IMPORT . ImportSpec
    (13) ImportSpec -> . ID ImportPath
    (14) ImportSpec -> . PERIOD ImportPath
    (15) ImportSpec -> . ImportPath
    (16) ImportPath -> . STRING

    LPAREN          shift and go to state 25
    ID              shift and go to state 26
    PERIOD          shift and go to state 23
    STRING          shift and go to state 21

    ImportSpec                     shift and go to state 22
    ImportPath                     shift and go to state 24

state 10

    (29) Declaration -> TypeDecl .

    SEMICOLON       reduce using rule 29 (Declaration -> TypeDecl .)


state 11

    (1) SourceFile -> PackageClause ImportDeclList . TopLevelDeclList
    (2) SourceFile -> PackageClause ImportDeclList .
    (7) ImportDeclList -> ImportDeclList . ImportDecl SEMICOLON
    (17) TopLevelDeclList -> . TopLevelDecl SEMICOLON
    (18) TopLevelDeclList -> . TopLevelDeclList TopLevelDecl SEMICOLON
    (8) ImportDecl -> . IMPORT LPAREN ImportSpecList RPAREN
    (9) ImportDecl -> . IMPORT LPAREN RPAREN
    (10) ImportDecl -> . IMPORT ImportSpec
    (19) TopLevelDecl -> . Declaration
    (20) TopLevelDecl -> . FunctionDecl
    (28) Declaration -> . ConstDecl
    (29) Declaration -> . TypeDecl
    (30) Declaration -> . VarDecl
    (26) FunctionDecl -> . FUNC ID StartScope Signature EndScope
    (27) FunctionDecl -> . FUNC ID StartScope Signature Block EndScope
    (31) ConstDecl -> .
    (32) TypeDecl -> . TYPE TypeSpec
    (33) TypeDecl -> . TYPE LPAREN TypeSpecList RPAREN
    (34) TypeDecl -> . TYPE LPAREN RPAREN
    (63) VarDecl -> . VAR VarSpec
    (64) VarDecl -> . VAR LPAREN VarSpecList RPAREN
    (65) VarDecl -> . VAR LPAREN RPAREN

    $end            reduce using rule 2 (SourceFile -> PackageClause ImportDeclList .)
    IMPORT          shift and go to state 9
    FUNC            shift and go to state 12
    SEMICOLON       reduce using rule 31 (ConstDecl -> .)
    TYPE            shift and go to state 14
    VAR             shift and go to state 13

    TypeDecl                       shift and go to state 10
    VarDecl                        shift and go to state 15
    FunctionDecl                   shift and go to state 4
    TopLevelDecl                   shift and go to state 5
    Declaration                    shift and go to state 8
    ConstDecl                      shift and go to state 16
    ImportDecl                     shift and go to state 27
    TopLevelDeclList               shift and go to state 28

state 12

    (26) FunctionDecl -> FUNC . ID StartScope Signature EndScope
    (27) FunctionDecl -> FUNC . ID StartScope Signature Block EndScope

    ID              shift and go to state 29


state 13

    (63) VarDecl -> VAR . VarSpec
    (64) VarDecl -> VAR . LPAREN VarSpecList RPAREN
    (65) VarDecl -> VAR . LPAREN RPAREN
    (68) VarSpec -> . IdentifierList Type
    (69) VarSpec -> . IdentifierList Type ASSIGN ExpressionList
    (70) VarSpec -> . IdentifierList Type ASSIGN LBRACE ExpressionList RBRACE
    (71) IdentifierList -> . ID
    (72) IdentifierList -> . IdentifierList COMMA ID

    LPAREN          shift and go to state 32
    ID              shift and go to state 30

    VarSpec                        shift and go to state 31
    IdentifierList                 shift and go to state 33

state 14

    (32) TypeDecl -> TYPE . TypeSpec
    (33) TypeDecl -> TYPE . LPAREN TypeSpecList RPAREN
    (34) TypeDecl -> TYPE . LPAREN RPAREN
    (37) TypeSpec -> . ID ASSIGN Type
    (38) TypeSpec -> . ID Type

    LPAREN          shift and go to state 34
    ID              shift and go to state 36

    TypeSpec                       shift and go to state 35

state 15

    (30) Declaration -> VarDecl .

    SEMICOLON       reduce using rule 30 (Declaration -> VarDecl .)


state 16

    (28) Declaration -> ConstDecl .

    SEMICOLON       reduce using rule 28 (Declaration -> ConstDecl .)


state 17

    (5) PackageClause -> PACKAGE ID . SEMICOLON

    SEMICOLON       shift and go to state 37


state 18

    (17) TopLevelDeclList -> TopLevelDecl SEMICOLON .

    FUNC            reduce using rule 17 (TopLevelDeclList -> TopLevelDecl SEMICOLON .)
    TYPE            reduce using rule 17 (TopLevelDeclList -> TopLevelDecl SEMICOLON .)
    VAR             reduce using rule 17 (TopLevelDeclList -> TopLevelDecl SEMICOLON .)
    SEMICOLON       reduce using rule 17 (TopLevelDeclList -> TopLevelDecl SEMICOLON .)
    $end            reduce using rule 17 (TopLevelDeclList -> TopLevelDecl SEMICOLON .)


state 19

    (6) ImportDeclList -> ImportDecl SEMICOLON .

    IMPORT          reduce using rule 6 (ImportDeclList -> ImportDecl SEMICOLON .)
    FUNC            reduce using rule 6 (ImportDeclList -> ImportDecl SEMICOLON .)
    TYPE            reduce using rule 6 (ImportDeclList -> ImportDecl SEMICOLON .)
    VAR             reduce using rule 6 (ImportDeclList -> ImportDecl SEMICOLON .)
    SEMICOLON       reduce using rule 6 (ImportDeclList -> ImportDecl SEMICOLON .)
    $end            reduce using rule 6 (ImportDeclList -> ImportDecl SEMICOLON .)


state 20

    (18) TopLevelDeclList -> TopLevelDeclList TopLevelDecl . SEMICOLON

    SEMICOLON       shift and go to state 38


state 21

    (16) ImportPath -> STRING .

    SEMICOLON       reduce using rule 16 (ImportPath -> STRING .)


state 22

    (10) ImportDecl -> IMPORT ImportSpec .

    SEMICOLON       reduce using rule 10 (ImportDecl -> IMPORT ImportSpec .)


state 23

    (14) ImportSpec -> PERIOD . ImportPath
    (16) ImportPath -> . STRING

    STRING          shift and go to state 21

    ImportPath                     shift and go to state 39

state 24

    (15) ImportSpec -> ImportPath .

    SEMICOLON       reduce using rule 15 (ImportSpec -> ImportPath .)


state 25

    (8) ImportDecl -> IMPORT LPAREN . ImportSpecList RPAREN
    (9) ImportDecl -> IMPORT LPAREN . RPAREN
    (11) ImportSpecList -> . ImportSpec SEMICOLON
    (12) ImportSpecList -> . ImportSpecList ImportSpec SEMICOLON
    (13) ImportSpec -> . ID ImportPath
    (14) ImportSpec -> . PERIOD ImportPath
    (15) ImportSpec -> . ImportPath
    (16) ImportPath -> . STRING

    RPAREN          shift and go to state 40
    ID              shift and go to state 26
    PERIOD          shift and go to state 23
    STRING          shift and go to state 21

    ImportSpecList                 shift and go to state 42
    ImportSpec                     shift and go to state 41
    ImportPath                     shift and go to state 24

state 26

    (13) ImportSpec -> ID . ImportPath
    (16) ImportPath -> . STRING

    STRING          shift and go to state 21

    ImportPath                     shift and go to state 43

state 27

    (7) ImportDeclList -> ImportDeclList ImportDecl . SEMICOLON

    SEMICOLON       shift and go to state 44


state 28

    (1) SourceFile -> PackageClause ImportDeclList TopLevelDeclList .
    (18) TopLevelDeclList -> TopLevelDeclList . TopLevelDecl SEMICOLON
    (19) TopLevelDecl -> . Declaration
    (20) TopLevelDecl -> . FunctionDecl
    (28) Declaration -> . ConstDecl
    (29) Declaration -> . TypeDecl
    (30) Declaration -> . VarDecl
    (26) FunctionDecl -> . FUNC ID StartScope Signature EndScope
    (27) FunctionDecl -> . FUNC ID StartScope Signature Block EndScope
    (31) ConstDecl -> .
    (32) TypeDecl -> . TYPE TypeSpec
    (33) TypeDecl -> . TYPE LPAREN TypeSpecList RPAREN
    (34) TypeDecl -> . TYPE LPAREN RPAREN
    (63) VarDecl -> . VAR VarSpec
    (64) VarDecl -> . VAR LPAREN VarSpecList RPAREN
    (65) VarDecl -> . VAR LPAREN RPAREN

    $end            reduce using rule 1 (SourceFile -> PackageClause ImportDeclList TopLevelDeclList .)
    FUNC            shift and go to state 12
    SEMICOLON       reduce using rule 31 (ConstDecl -> .)
    TYPE            shift and go to state 14
    VAR             shift and go to state 13

    TypeDecl                       shift and go to state 10
    VarDecl                        shift and go to state 15
    FunctionDecl                   shift and go to state 4
    TopLevelDecl                   shift and go to state 20
    Declaration                    shift and go to state 8
    ConstDecl                      shift and go to state 16

state 29

    (26) FunctionDecl -> FUNC ID . StartScope Signature EndScope
    (27) FunctionDecl -> FUNC ID . StartScope Signature Block EndScope
    (23) StartScope -> .

    LPAREN          reduce using rule 23 (StartScope -> .)

    StartScope                     shift and go to state 45

state 30

    (71) IdentifierList -> ID .

    COMMA           reduce using rule 71 (IdentifierList -> ID .)
    VARTYPE         reduce using rule 71 (IdentifierList -> ID .)
    ID              reduce using rule 71 (IdentifierList -> ID .)
    LBRACK          reduce using rule 71 (IdentifierList -> ID .)
    STRUCT          reduce using rule 71 (IdentifierList -> ID .)
    MUL             reduce using rule 71 (IdentifierList -> ID .)


state 31

    (63) VarDecl -> VAR VarSpec .

    SEMICOLON       reduce using rule 63 (VarDecl -> VAR VarSpec .)


state 32

    (64) VarDecl -> VAR LPAREN . VarSpecList RPAREN
    (65) VarDecl -> VAR LPAREN . RPAREN
    (66) VarSpecList -> . VarSpec SEMICOLON
    (67) VarSpecList -> . VarSpecList VarSpec SEMICOLON
    (68) VarSpec -> . IdentifierList Type
    (69) VarSpec -> . IdentifierList Type ASSIGN ExpressionList
    (70) VarSpec -> . IdentifierList Type ASSIGN LBRACE ExpressionList RBRACE
    (71) IdentifierList -> . ID
    (72) IdentifierList -> . IdentifierList COMMA ID

    RPAREN          shift and go to state 46
    ID              shift and go to state 30

    VarSpecList                    shift and go to state 48
    IdentifierList                 shift and go to state 33
    VarSpec                        shift and go to state 47

state 33

    (68) VarSpec -> IdentifierList . Type
    (69) VarSpec -> IdentifierList . Type ASSIGN ExpressionList
    (70) VarSpec -> IdentifierList . Type ASSIGN LBRACE ExpressionList RBRACE
    (72) IdentifierList -> IdentifierList . COMMA ID
    (39) Type -> . VARTYPE
    (40) Type -> . LiteralType
    (41) Type -> . ID
    (42) LiteralType -> . ArrayType
    (43) LiteralType -> . StructType
    (44) LiteralType -> . PointerType
    (45) ArrayType -> . LBRACK Expression RBRACK Type
    (46) StructType -> . STRUCT StructScope LBRACE FieldDeclList RBRACE EndScope
    (47) StructType -> . STRUCT StructScope LBRACE RBRACE EndScope
    (52) PointerType -> . MUL Type

    COMMA           shift and go to state 57
    VARTYPE         shift and go to state 55
    ID              shift and go to state 54
    LBRACK          shift and go to state 52
    STRUCT          shift and go to state 59
    MUL             shift and go to state 51

    StructType                     shift and go to state 49
    LiteralType                    shift and go to state 50
    ArrayType                      shift and go to state 53
    PointerType                    shift and go to state 56
    Type                           shift and go to state 58

state 34

    (33) TypeDecl -> TYPE LPAREN . TypeSpecList RPAREN
    (34) TypeDecl -> TYPE LPAREN . RPAREN
    (35) TypeSpecList -> . TypeSpec SEMICOLON
    (36) TypeSpecList -> . TypeSpecList TypeSpec SEMICOLON
    (37) TypeSpec -> . ID ASSIGN Type
    (38) TypeSpec -> . ID Type

    RPAREN          shift and go to state 60
    ID              shift and go to state 36

    TypeSpec                       shift and go to state 62
    TypeSpecList                   shift and go to state 61

state 35

    (32) TypeDecl -> TYPE TypeSpec .

    SEMICOLON       reduce using rule 32 (TypeDecl -> TYPE TypeSpec .)


state 36

    (37) TypeSpec -> ID . ASSIGN Type
    (38) TypeSpec -> ID . Type
    (39) Type -> . VARTYPE
    (40) Type -> . LiteralType
    (41) Type -> . ID
    (42) LiteralType -> . ArrayType
    (43) LiteralType -> . StructType
    (44) LiteralType -> . PointerType
    (45) ArrayType -> . LBRACK Expression RBRACK Type
    (46) StructType -> . STRUCT StructScope LBRACE FieldDeclList RBRACE EndScope
    (47) StructType -> . STRUCT StructScope LBRACE RBRACE EndScope
    (52) PointerType -> . MUL Type

    ASSIGN          shift and go to state 63
    VARTYPE         shift and go to state 55
    ID              shift and go to state 54
    LBRACK          shift and go to state 52
    STRUCT          shift and go to state 59
    MUL             shift and go to state 51

    StructType                     shift and go to state 49
    LiteralType                    shift and go to state 50
    Type                           shift and go to state 64
    ArrayType                      shift and go to state 53
    PointerType                    shift and go to state 56

state 37

    (5) PackageClause -> PACKAGE ID SEMICOLON .
